--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "vue-template-compiler": "^2.1.8",
     "webpack": "^2.1.0-beta.21",
     "webpack-dev-server": "^2.1.0-beta.0",
+    "webpack-hot-middleware": "^2.15.0",
     "webpack-merge": "^2.3.1"
   }
 }
