--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
+    "es6-promise": "^4.1.1",
     "fastclick": "^1.0.6",
     "moment": "^2.17.1",
     "vue": "^2.1.8",
